--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,18 @@
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-  <title>Angular App</title>
+  <meta charset="utf-8">
+  <title>MyApp</title>
   <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 
 <body>
-  <my-app>loading...</my-app>
-  <!-- <root>loading...</root> -->
+  <app-root></app-root>
 </body>
 
 </html>
